--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -44,16 +44,16 @@
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="-16dp"
-        android:layout_marginBottom="-110sp"
         android:layout_marginEnd="-32dp"
+        android:layout_marginBottom="-110sp"
         android:gravity="top"
         android:lines="1"
-        android:text="@string/carNrDefault"
-        android:textColor="@android:color/transparent"
-        android:shadowColor="@color/brightLargeText2"
+        android:shadowColor="@color/black"
         android:shadowDx="8"
         android:shadowDy="-8"
         android:shadowRadius="16"
+        android:text="@string/carNrDefault"
+        android:textColor="@android:color/transparent"
         android:textStyle="bold"
         app:autoSizeMaxTextSize="512sp"
         app:autoSizeMinTextSize="72sp"
@@ -94,18 +94,18 @@
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="-160sp"
-        android:layout_marginBottom="32dp"
         android:layout_marginEnd="-32dp"
+        android:layout_marginBottom="32dp"
         android:background="@android:color/transparent"
         android:gravity="bottom"
         android:lines="1"
-        android:text="@string/positionDefault"
-        android:textAlignment="textStart"
-        android:textColor="@android:color/transparent"
-        android:shadowColor="@color/brightLargeText2"
+        android:shadowColor="@android:color/black"
         android:shadowDx="8"
         android:shadowDy="-8"
         android:shadowRadius="20"
+        android:text="@string/positionDefault"
+        android:textAlignment="textStart"
+        android:textColor="@android:color/transparent"
 
         android:textStyle="bold"
         app:autoSizeMaxTextSize="512sp"
@@ -152,16 +152,16 @@
         android:background="@android:color/transparent"
         android:bufferType="normal"
         android:elevation="5dp"
-        android:lines="1"
-        android:text="@string/largeTextDefault"
-        android:textAlignment="center"
         android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@android:color/transparent"
-        android:shadowColor="@color/brightLargeText2"
+        android:lines="1"
+        android:shadowColor="@android:color/black"
         android:shadowDx="-30"
         android:shadowDy="-30"
         android:shadowRadius="60"
+        android:text="@string/largeTextDefault"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/transparent"
         android:textStyle="bold"
         app:autoSizeMaxTextSize="2048sp"
         app:autoSizeMinTextSize="192sp"
