Fix config (was using test url)

--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="url">ws://10.0.2.2:8080/</string>
-    <!--<string name="url">ws://www.apex-timing.com:8862/</string>-->
+    <!--<string name="url">ws://10.0.2.2:8080/</string>-->
+    <string name="url">ws://www.apex-timing.com:8862/</string>
 
     <string name="ttspitch">1.0</string>
     <string name="ttsvoice">default</string>
